# lmn

./: LICENSE  README.md  cabal.project  flake.nix  hie.yaml  lmn.cabal  notes.md
.github/workflows/: CI.yaml
app/: Main.hs
src/Lmn/: Cli.hs
src/Lmn/Cli/: Env.hs  Lib.hs  Repo.hs  Template.hs
test/: Spec.hs
