cabal-version:   2.4
name:            lmn
version:         0
license:         MIT
build-type:      Simple
license-file:    LICENSE
author:          Jarrett Keifer
maintainer:      Jarrett Keifer <jkeifer0@gmail.com>
copyright:       2022 Jarrett Keifer
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

category:
description:     A directory-based workspace manager
homepage:        https://github.com/jkeifer/lmn#readme
source-repository head
  type:     git
  location: git://github.com/jkeifer/lmn.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
      Lmn.Cli
    , Lmn.Cli.Env
    , Lmn.Cli.Lib
    , Lmn.Cli.Repo
    , Lmn.Cli.Template
  build-depends:
    , containers
    , mtl
    , optparse-applicative

executable lmn
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , lmn
    , optparse-applicative
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite lmn-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , lmn
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark lmn-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , lmn

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
